liquibase dependencies + init sql

--- a/src/main/resources/db/changelog/reincarnation.changelog.yaml
+++ b/src/main/resources/db/changelog/reincarnation.changelog.yaml
@@ -4,7 +4,7 @@ databaseChangeLog:
 
   - changeSet:
       id: 1
-      author: Sergei Tsvetkov
+      author: Tatiana Shamrikova
       changes:
         - sqlFile:
             path: classpath:db/changelog/migration/1__init.sql
